# lab03-uml-relationships-tango

./: .replit  CMakeLists.txt  Carro.cpp  Carro.h  Chofer.cpp  Chofer.h  Llanta.cpp  Llanta.h  Main.cpp  Motor.cpp  Motor.h  Person.cpp  Person.h  Propietario.cpp  Propietario.h  Puerta.cpp  Puerta.h  README.md  Ventana.cpp  Ventana.h
